--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -368,7 +368,7 @@ body {
 .entry-form {
     color: #000000;
     text-shadow: none;
-    /*margin: 15% auto 5%;*/
+    margin: 15% auto 5%;
     background: #fff;
     padding: 20px;
     border-radius: 3px;
@@ -383,7 +383,7 @@ body {
 }
 
 .register-form {
-    max-width: 500px;
+    max-width: 600px;
 }
 
 .login-form {
@@ -435,15 +435,20 @@ div.mce-edit-area,
 }
 
 footer {
-    background: #eeeeee;
+    background: #cecece;
     padding: 1em 0 0;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
 }
 
 .footer h3 {
     margin-bottom: 1.2em;
 }
 
-.footer .founders {
+.footer .founders{
     color: #ffffff;
     padding: 0.8em 0;
     background-color: #07212c;
@@ -452,4 +457,17 @@ footer {
 
 .founders ul {
     margin-bottom: 0;
+}
+
+.push {
+    padding-bottom: 70px;
+}
+
+.down {
+    padding-top: 50px;
+}
+
+.footer1 {
+    /*position: absolute !important;*/
+    background: none !important;
 }
